// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SPL Approval Step close out form tab renders correctly 1`] = `
.c0 {
  text-align: center;
  margin-bottom: 1rem;
}

.c1 {
  padding-top: 1rem;
  padding-bottom: 1rem;
  font-family: 'BCSans',Fallback,sans-serif;
}

.c3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  margin: 0.5rem 0;
  text-align: right;
}

.c2 {
  text-align: center;
  font-family: 'BCSans-Bold';
  margin-bottom: 1.5rem;
}

<div
  class="splStep container-fluid"
>
  <form
    action="#"
  >
    <div
      class="c0 default-status"
    >
      <h5
        class="c1"
      >
        Approved for Surplus Property Program
      </h5>
      <svg
        fill="currentColor"
        height="64"
        size="64"
        stroke="currentColor"
        stroke-width="0"
        style="color: rgb(32, 167, 77);"
        viewBox="0 0 512 512"
        width="64"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 48c110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200-110.532 0-200-89.451-200-200 0-110.532 89.451-200 200-200m140.204 130.267l-22.536-22.718c-4.667-4.705-12.265-4.736-16.97-.068L215.346 303.697l-59.792-60.277c-4.667-4.705-12.265-4.736-16.97-.069l-22.719 22.536c-4.705 4.667-4.736 12.265-.068 16.971l90.781 91.516c4.667 4.705 12.265 4.736 16.97.068l172.589-171.204c4.704-4.668 4.734-12.266.067-16.971z"
        />
      </svg>
      <h5
        class="c1"
      >
        Approval Date 2020-07-15
      </h5>
    </div>
    <div
      class="c2"
    >
      Approved for ERP
    </div>
    <nav
      class="nav nav-tabs"
      role="tablist"
    >
      <a
        aria-controls="approvalTabs-tabpane-projectInformation"
        aria-selected="false"
        class="nav-item nav-link"
        data-rb-event-key="projectInformation"
        href="#"
        id="approvalTabs-tab-projectInformation"
        role="tab"
        tabindex="-1"
      >
        Project Information
      </a>
      <a
        aria-controls="approvalTabs-tabpane-documentation"
        aria-selected="false"
        class="nav-item nav-link"
        data-rb-event-key="documentation"
        href="#"
        id="approvalTabs-tab-documentation"
        role="tab"
        tabindex="-1"
      >
        Documentation
      </a>
      <a
        aria-controls="approvalTabs-tabpane-enhancedReferralProcess"
        aria-selected="false"
        class="nav-item nav-link"
        data-rb-event-key="enhancedReferralProcess"
        href="#"
        id="approvalTabs-tab-enhancedReferralProcess"
        role="tab"
        tabindex="-1"
      >
        Enhanced Referral Process
      </a>
      <a
        aria-controls="approvalTabs-tabpane-surplusPropertyList"
        aria-selected="false"
        class="nav-item nav-link"
        data-rb-event-key="surplusPropertyList"
        href="#"
        id="approvalTabs-tab-surplusPropertyList"
        role="tab"
        tabindex="-1"
      >
        Surplus Properties List
      </a>
      <a
        aria-controls="approvalTabs-tabpane-closeOutForm"
        aria-selected="true"
        class="nav-item nav-link active"
        data-rb-event-key="closeOutForm"
        href="#"
        id="approvalTabs-tab-closeOutForm"
        role="tab"
      >
        Close Out Form
      </a>
    </nav>
    <div
      class="tab-content"
    >
      <div
        aria-hidden="false"
        aria-labelledby="approvalTabs-tab-closeOutForm"
        class="fade tab-pane active show"
        id="approvalTabs-tabpane-closeOutForm"
        role="tabpanel"
      >
        <div
          class="container-fluid"
        >
          <div
            class="form-row"
          >
            <div
              class="col-md-6"
            >
              <div
                class="form-row"
              >
                <label
                  class="form-label col-form-label col-md-4"
                >
                  Project Number
                </label>
                <div
                  class="col-md-8 form-group"
                >
                  <input
                    class="form-control"
                    disabled=""
                    id="input-projectNumber"
                    name="projectNumber"
                    value="test-01"
                  />
                </div>
              </div>
              <div
                class="form-row"
              >
                <label
                  class="form-label col-form-label col-md-4"
                >
                  Agency
                </label>
                <div
                  class="col-md-8 form-group"
                >
                  <input
                    class="form-control"
                    disabled=""
                    id="input-agency"
                    name="agency"
                    value=""
                  />
                </div>
              </div>
              <div
                class="form-row"
              >
                <label
                  class="form-label col-form-label col-md-4"
                >
                  Sub Agency
                </label>
                <div
                  class="col-md-8 form-group"
                >
                  <input
                    class="form-control"
                    disabled=""
                    id="input-subAgency"
                    name="subAgency"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="col-md-6"
            >
              <div
                class="form-row"
              >
                <label
                  class="form-label col-form-label col-md-4"
                >
                  Project Manager(s)
                </label>
                <div
                  class="col-md-8 form-group"
                >
                  <input
                    class="form-control"
                    id="input-manager"
                    name="manager"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <h3>
            Purchase Information
          </h3>
          <div
            class="form-row"
          >
            <div
              class="col-md-6"
            >
              <div
                class="form-row"
              >
                <label
                  class="form-label col-form-label col-md-4"
                >
                  Name of Purchaser
                </label>
                <div
                  class="col-md-8 form-group"
                >
                  <input
                    class="form-control"
                    disabled=""
                    id="input-purchaser"
                    name="purchaser"
                    value="purchaser"
                  />
                </div>
              </div>
              <div
                class="form-row"
              >
                <label
                  class="form-label col-form-label col-md-4"
                >
                  Real Estate Agent
                </label>
                <div
                  class="col-md-8 form-group"
                >
                  <input
                    class="form-control"
                    id="input-realtor"
                    name="realtor"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="col-md-6"
            >
              <div
                class="form-row"
              >
                <label
                  class="form-label col-form-label col-md-4"
                >
                  Real Estate Agent Rate
                </label>
                <div
                  class="col-md-8 form-group"
                >
                  <input
                    class="form-control"
                    id="input-realtorRate"
                    name="realtorRate"
                    value=""
                  />
                </div>
              </div>
              <div
                class="form-row"
              >
                <label
                  class="form-label col-form-label col-md-4"
                >
                  Real Estate Commission Paid
                </label>
                <div
                  class="col-md-8 form-group"
                >
                  <div
                    class="input-tooltip-wrapper"
                  >
                    <input
                      class="form-control"
                      name="realtorCommission"
                      placeholder=""
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <h3>
            Sale Information
          </h3>
          <div
            class="form-row"
          >
            <div
              class="col-md-6"
            >
              <div
                class="form-row"
              >
                <label
                  class="form-label col-form-label col-md-4"
                >
                  Sales Completion Date
                </label>
                <div
                  class="col-md-8 form-group"
                >
                  <div
                    class="react-datepicker-wrapper"
                  >
                    <div
                      class="react-datepicker__input-container"
                    >
                      <input
                        autocomplete="off"
                        class="form-control date-picker"
                        id="datepicker-disposedOn"
                        name="disposedOn"
                        placeholder="--/--/----"
                        type="text"
                        value="01/01/2020"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="form-row"
              >
                <label
                  class="form-label col-form-label col-md-4"
                >
                  Sales Adjustment Date
                </label>
                <div
                  class="col-md-8 form-group"
                >
                  <div
                    class="react-datepicker-wrapper"
                  >
                    <div
                      class="react-datepicker__input-container"
                    >
                      <input
                        autocomplete="off"
                        class="form-control date-picker"
                        id="datepicker-adjustedOn"
                        name="adjustedOn"
                        placeholder="--/--/----"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="col-md-6"
            >
              <div
                class="form-row"
              >
                <label
                  class="form-label col-form-label col-md-4"
                >
                  Actual Fiscal Year of Sale
                </label>
                <div
                  class="col-md-8 form-group"
                >
                  <input
                    class="form-control"
                    name="actualFiscalYear"
                    placeholder="YYYY/YYYY"
                    value=""
                  />
                </div>
              </div>
              <div
                class="form-row"
              >
                <label
                  class="form-label col-form-label col-md-4"
                >
                  Best Information of Future Planned Use
                </label>
                <div
                  class="col-md-8 form-group"
                >
                  <input
                    class="form-control"
                    id="input-plannedFutureUse"
                    name="plannedFutureUse"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <h3>
            Appraisal
          </h3>
          <div
            class="form-row"
          >
            <div
              class="PropertyListView container-fluid"
            >
              <div
                class="ScrollContainer"
              >
                <div
                  class="table"
                  role="table"
                >
                  <div
                    class="thead thead-light"
                  >
                    <div
                      class="tr"
                      role="row"
                      style="display: flex; flex: 1 0 auto; min-width: 845px;"
                    >
                      <div
                        class="th"
                        colspan="1"
                        role="columnheader"
                        style="box-sizing: border-box; flex: 100 0 auto; min-width: 30px; width: 100px; justify-content: flex-start; text-align: left; align-items: center; display: flex;"
                      >
                        Property Name
                      </div>
                      <div
                        class="th"
                        colspan="1"
                        role="columnheader"
                        style="box-sizing: border-box; flex: 100 0 auto; min-width: 30px; width: 100px; justify-content: flex-start; text-align: left; align-items: center; display: flex;"
                      >
                        Street Address
                      </div>
                      <div
                        class="th"
                        colspan="1"
                        role="columnheader"
                        style="box-sizing: border-box; flex: 100 0 auto; min-width: 30px; width: 100px; justify-content: flex-start; text-align: left; align-items: center; display: flex;"
                      >
                        Location
                      </div>
                      <div
                        class="th"
                        colspan="1"
                        role="columnheader"
                        style="box-sizing: border-box; flex: 60 0 auto; min-width: 30px; width: 60px; justify-content: flex-start; text-align: left; align-items: center; display: flex;"
                      >
                        Type
                      </div>
                      <div
                        class="th"
                        colspan="1"
                        role="columnheader"
                        style="box-sizing: border-box; flex: 145 0 auto; min-width: 145px; width: 145px; justify-content: flex-start; text-align: left; align-items: center; display: flex;"
                      >
                        Appraised Value
                      </div>
                      <div
                        class="th"
                        colspan="1"
                        role="columnheader"
                        style="box-sizing: border-box; flex: 145 0 auto; min-width: 145px; width: 145px; justify-content: flex-start; text-align: left; align-items: center; display: flex;"
                      >
                        Appraised Date
                      </div>
                      <div
                        class="th"
                        colspan="1"
                        role="columnheader"
                        style="box-sizing: border-box; flex: 145 0 auto; min-width: 145px; width: 145px; justify-content: flex-start; text-align: left; align-items: center; display: flex;"
                      >
                        Appraisal Firm
                      </div>
                      <div
                        class="th"
                        colspan="1"
                        role="columnheader"
                        style="box-sizing: border-box; flex: 145 0 auto; min-width: 145px; width: 145px; justify-content: flex-start; text-align: left; align-items: center; display: flex;"
                      >
                        Assessed Value
                      </div>
                      <div
                        class="th"
                        colspan="1"
                        role="columnheader"
                        style="box-sizing: border-box; flex: 145 0 auto; min-width: 145px; width: 145px; justify-content: flex-start; text-align: left; align-items: center; display: flex;"
                      >
                        Assessed Date
                      </div>
                    </div>
                  </div>
                  <div
                    class="no-rows-message"
                  >
                    No rows to display
                  </div>
                </div>
              </div>
            </div>
          </div>
          <h3>
            Financial Summary
          </h3>
          <div
            class="form-row"
          >
            <div
              class="col-md-6"
            >
              <div
                class="form-row"
              >
                <label
                  class="form-label col-form-label col-md-4"
                >
                  Sales Proceeds
                </label>
                <div
                  class="col-md-8 form-group"
                >
                  <div
                    class="input-tooltip-wrapper"
                  >
                    <input
                      class="form-control"
                      name="market"
                      placeholder=""
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="form-row"
              >
                <label
                  class="form-label col-form-label col-md-4"
                >
                  Cost of Sales
                </label>
                <div
                  class="col-md-8 form-group"
                >
                  <div
                    class="input-tooltip-wrapper"
                  >
                    <input
                      class="form-control"
                      name="salesCost"
                      placeholder=""
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="form-row"
              >
                <label
                  class="form-label col-form-label col-md-4"
                >
                  Net Book Value
                </label>
                <div
                  class="col-md-8 form-group"
                >
                  <div
                    class="input-tooltip-wrapper"
                  >
                    <input
                      class="form-control"
                      name="netBook"
                      placeholder=""
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="form-row"
              >
                <label
                  class="form-label col-form-label col-md-4"
                >
                  Gain Before SPP Cost
                </label>
                <div
                  class="col-md-8 form-group"
                >
                  <div
                    class="input-tooltip-wrapper"
                  >
                    <input
                      class="form-control"
                      name="gainBeforeSpp"
                      placeholder=""
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="form-row"
              >
                <label
                  class="form-label col-form-label col-md-4"
                >
                  Remediation (Not funded throuch COS. TRAN only)
                </label>
                <div
                  class="col-md-8 form-group"
                >
                  <input
                    class="form-control"
                    id="input-remediation"
                    name="remediation"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="col-md-6"
            >
              <div
                class="form-row"
              >
                <label
                  class="form-label col-form-label col-md-4"
                >
                  SPP Cost
                </label>
                <div
                  class="col-md-8 form-group"
                >
                  <div
                    class="input-tooltip-wrapper"
                  >
                    <input
                      class="form-control"
                      name="programCost"
                      placeholder=""
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="form-row"
              >
                <label
                  class="form-label col-form-label col-md-4"
                >
                  SPP Cost Calculation Notes
                </label>
                <div
                  class="col-md-8 form-group"
                >
                  <input
                    class="form-control"
                    id="input-notes[12].note"
                    name="notes[12].note"
                    value="sppcost"
                  />
                </div>
              </div>
              <div
                class="form-row"
              >
                <label
                  class="form-label col-form-label col-md-4"
                >
                  Gain after SPP Cost
                </label>
                <div
                  class="col-md-8 form-group"
                >
                  <div
                    class="input-tooltip-wrapper"
                  >
                    <input
                      class="form-control"
                      name="gainAfterSpp"
                      placeholder=""
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="form-row"
              >
                <label
                  class="form-label col-form-label col-md-4"
                >
                  Gain after SPP Cost Calculation Notes
                </label>
                <div
                  class="col-md-8 form-group"
                >
                  <input
                    class="form-control"
                    id="input-notes[13].note"
                    name="notes[13].note"
                    value="sppgain"
                  />
                </div>
              </div>
              <div
                class="form-row"
              >
                <label
                  class="form-label col-form-label col-md-4"
                >
                  Interest Component
                </label>
                <div
                  class="col-md-8 form-group"
                >
                  <div
                    class="input-tooltip-wrapper"
                  >
                    <input
                      class="form-control"
                      name="interestComponent"
                      placeholder=""
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="form-row"
              >
                <label
                  class="form-label col-form-label col-md-4"
                >
                  Net Proceeds
                </label>
                <div
                  class="col-md-8 form-group"
                >
                  <div
                    class="input-tooltip-wrapper"
                  >
                    <input
                      class="form-control"
                      name="netProceeds"
                      placeholder=""
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <h3>
            Financing Information
          </h3>
          <div
            class="ProjectNotes form-row"
          >
            <div
              class="col-md-12 form-group"
            >
              <label
                class="form-label"
                for="input-notes[10].note"
              >
                Loan Terms
              </label>
              <textarea
                class="col-md-5 form-control"
                id="input-notes[10].note"
                name="notes[10].note"
              >
                loanterms
              </textarea>
            </div>
          </div>
          <div
            class="ProjectNotes form-row"
          >
            <div
              class="col-md-12 form-group"
            >
              <label
                class="form-label"
                for="input-notes[15].note"
              >
                Notes
              </label>
              <textarea
                class="col-md-5 form-control"
                id="input-notes[15].note"
                name="notes[15].note"
              >
                closeout
              </textarea>
            </div>
          </div>
          <h3>
            OCG
          </h3>
          <div
            class="col-md-12 form-row"
          >
            <label
              class="form-label col-form-label col-md-2"
            >
              OCG Gain / Loss
            </label>
            <div
              class="col-md-4 form-group"
            >
              <div
                class="input-tooltip-wrapper"
              >
                <input
                  class="form-control"
                  name="ocgFinancialStatement"
                  placeholder=""
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="ProjectNotes form-row"
          >
            <div
              class="col-md-12 form-group"
            >
              <label
                class="form-label"
                for="input-notes[14].note"
              >
                Sales History Notes
              </label>
              <textarea
                class="col-md-5 form-control"
                id="input-notes[14].note"
                name="notes[14].note"
              >
                saleshistory
              </textarea>
            </div>
          </div>
          <div
            class="ProjectNotes form-row"
          >
            <div
              class="col-md-12 form-group"
            >
              <label
                class="form-label"
                for="input-notes[16].note"
              >
                Project Comments
                <svg
                  class="tooltip-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </label>
              <textarea
                class="col-md-5 form-control"
                id="input-notes[16].note"
                name="notes[16].note"
              >
                comments
              </textarea>
            </div>
          </div>
          <h3>
            Signed by Chief Financial Officer
          </h3>
          <div
            class="form-row"
          >
            <div
              class="col-md-6"
            >
              <div
                class="form-row"
              >
                <label
                  class="form-label col-form-label col-md-4"
                >
                  Preliminary Form Signed By
                </label>
                <div
                  class="col-md-8 form-group"
                >
                  <input
                    class="form-control"
                    id="input-preliminaryFormSignedBy"
                    name="preliminaryFormSignedBy"
                    value=""
                  />
                </div>
              </div>
              <div
                class="form-row"
              >
                <label
                  class="form-label col-form-label col-md-4"
                >
                  Final Form Signed by
                </label>
                <div
                  class="col-md-8 form-group"
                >
                  <input
                    class="form-control"
                    id="input-finalFormSignedBy"
                    name="finalFormSignedBy"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="col-md-6"
            >
              <div
                class="form-row"
              >
                <label
                  class="form-label col-form-label col-md-4"
                >
                  Signature Date
                </label>
                <div
                  class="col-md-8 form-group"
                >
                  <div
                    class="react-datepicker-wrapper"
                  >
                    <div
                      class="react-datepicker__input-container"
                    >
                      <input
                        autocomplete="off"
                        class="form-control date-picker"
                        id="datepicker-preliminaryFormSignedOn"
                        name="preliminaryFormSignedOn"
                        placeholder="--/--/----"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="form-row"
              >
                <label
                  class="form-label col-form-label col-md-4"
                >
                  Signature Date
                </label>
                <div
                  class="col-md-8 form-group"
                >
                  <div
                    class="react-datepicker-wrapper"
                  >
                    <div
                      class="react-datepicker__input-container"
                    >
                      <input
                        autocomplete="off"
                        class="form-control date-picker"
                        id="datepicker-finalFormSignedOn"
                        name="finalFormSignedOn"
                        placeholder="--/--/----"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <h3>
            Adjustment to Prior Year Sale
          </h3>
          <div
            class="form-row"
          >
            <div
              class="col-md-6"
            >
              <div
                class="form-row"
              >
                <label
                  class="form-label col-form-label col-md-4"
                >
                  Adjustment to Prior Year Sale Amount
                </label>
                <div
                  class="col-md-8 form-group"
                >
                  <div
                    class="input-tooltip-wrapper"
                  >
                    <input
                      class="form-control"
                      name="priorYearAdjustmentAmount"
                      placeholder=""
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="col-md-6"
            >
              <div
                class="form-row"
              />
              <div
                class="form-row"
              >
                <label
                  class="form-label col-form-label col-md-4"
                >
                  Adjustment to Prior Year Sale Date
                </label>
                <div
                  class="col-md-8 form-group"
                >
                  <div
                    class="react-datepicker-wrapper"
                  >
                    <div
                      class="react-datepicker__input-container"
                    >
                      <input
                        autocomplete="off"
                        class="form-control date-picker"
                        id="datepicker-priorYearAdjustmentOn"
                        name="priorYearAdjustmentOn"
                        placeholder="--/--/----"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ProjectNotes form-row"
          >
            <div
              class="col-md-12 form-group"
            >
              <label
                class="form-label"
                for="input-notes[11].note"
              >
                Adjustment to Prior Year Sale Notes
              </label>
              <textarea
                class="col-md-5 form-control"
                id="input-notes[11].note"
                name="notes[11].note"
              >
                adjustment
              </textarea>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="text-align: right;"
    />
    <div
      class="c3"
    />
    <div
      class="c3"
    >
      <span>
        <button
          class="Button btn btn-primary"
          style="margin-left: 10px;"
          type="button"
        >
          <div
            class="Button__value"
          >
            Save
          </div>
        </button>
      </span>
      <span>
        <button
          class="Button btn btn-danger"
          type="button"
        >
          <div
            class="Button__value"
          >
            Cancel Project
          </div>
        </button>
      </span>
    </div>
  </form>
</div>
`;

exports[`SPL Approval Step renders correctly 1`] = `
.c0 {
  text-align: center;
  margin-bottom: 1rem;
}

.c1 {
  padding-top: 1rem;
  padding-bottom: 1rem;
  font-family: 'BCSans',Fallback,sans-serif;
}

.c2 {
  text-align: center;
  font-family: 'BCSans-Bold';
  margin-bottom: 1.5rem;
}

<div
  class="splStep container-fluid"
>
  <form
    action="#"
  >
    <div
      class="c0 default-status"
    >
      <h5
        class="c1"
      >
        Approved for Surplus Property Program
      </h5>
      <svg
        fill="currentColor"
        height="64"
        size="64"
        stroke="currentColor"
        stroke-width="0"
        style="color: rgb(32, 167, 77);"
        viewBox="0 0 512 512"
        width="64"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 48c110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200-110.532 0-200-89.451-200-200 0-110.532 89.451-200 200-200m140.204 130.267l-22.536-22.718c-4.667-4.705-12.265-4.736-16.97-.068L215.346 303.697l-59.792-60.277c-4.667-4.705-12.265-4.736-16.97-.069l-22.719 22.536c-4.705 4.667-4.736 12.265-.068 16.971l90.781 91.516c4.667 4.705 12.265 4.736 16.97.068l172.589-171.204c4.704-4.668 4.734-12.266.067-16.971z"
        />
      </svg>
      <h5
        class="c1"
      >
        Approval Date 2020-07-15
      </h5>
    </div>
    <div
      class="c2"
    >
      Approved for ERP
    </div>
    <nav
      class="nav nav-tabs"
      role="tablist"
    >
      <a
        aria-controls="approvalTabs-tabpane-projectInformation"
        aria-selected="false"
        class="nav-item nav-link"
        data-rb-event-key="projectInformation"
        href="#"
        id="approvalTabs-tab-projectInformation"
        role="tab"
        tabindex="-1"
      >
        Project Information
      </a>
      <a
        aria-controls="approvalTabs-tabpane-documentation"
        aria-selected="false"
        class="nav-item nav-link"
        data-rb-event-key="documentation"
        href="#"
        id="approvalTabs-tab-documentation"
        role="tab"
        tabindex="-1"
      >
        Documentation
      </a>
      <a
        aria-controls="approvalTabs-tabpane-enhancedReferralProcess"
        aria-selected="false"
        class="nav-item nav-link"
        data-rb-event-key="enhancedReferralProcess"
        href="#"
        id="approvalTabs-tab-enhancedReferralProcess"
        role="tab"
        tabindex="-1"
      >
        Enhanced Referral Process
      </a>
      <a
        aria-controls="approvalTabs-tabpane-surplusPropertyList"
        aria-selected="true"
        class="nav-item nav-link active"
        data-rb-event-key="surplusPropertyList"
        href="#"
        id="approvalTabs-tab-surplusPropertyList"
        role="tab"
      >
        Surplus Properties List
      </a>
      <a
        aria-controls="approvalTabs-tabpane-closeOutForm"
        aria-selected="false"
        class="nav-item nav-link"
        data-rb-event-key="closeOutForm"
        href="#"
        id="approvalTabs-tab-closeOutForm"
        role="tab"
        tabindex="-1"
      >
        Close Out Form
      </a>
    </nav>
    <div
      class="tab-content"
    >
      <div
        aria-hidden="false"
        aria-labelledby="approvalTabs-tab-surplusPropertyList"
        class="fade tab-pane active show"
        id="approvalTabs-tabpane-surplusPropertyList"
        role="tabpanel"
      >
        <div
          class="SurplusPropertyListForm container-fluid"
        >
          <div
            class="form-row"
          >
            <label
              class="form-label col-form-label col-md-3"
            >
              Date Entered Market
              <svg
                class="tooltip-icon"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                />
              </svg>
            </label>
            <div
              class="required col-md-2 form-group"
            >
              <div
                class="react-datepicker-wrapper"
              >
                <div
                  class="react-datepicker__input-container"
                >
                  <input
                    autocomplete="off"
                    class="form-control date-picker"
                    disabled=""
                    id="datepicker-marketedOn"
                    name="marketedOn"
                    placeholder="--/--/----"
                    required=""
                    type="text"
                    value="01/01/2020"
                  />
                </div>
              </div>
            </div>
            <div
              class="col-md-7"
            >
              <button
                class="btn btn-primary"
                disabled=""
                type="button"
              >
                Change Status to Marketing
              </button>
            </div>
          </div>
          <div
            class="ProjectNotes form-row"
          >
            <div
              class="col-md-12 form-group"
            >
              <label
                class="form-label"
                for="input-offersNote"
              >
                Offers Received
                <svg
                  class="tooltip-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </label>
              <textarea
                class="col-md-5 form-control"
                disabled=""
                id="input-offersNote"
                name="offersNote"
              />
            </div>
          </div>
          <div
            class="form-row"
          >
            <label
              class="form-label col-form-label col-md-3"
            >
              Contract in Place
            </label>
            <div
              class="required form-group"
            >
              <div
                class="check-field"
              >
                <div
                  class="form-check"
                >
                  <input
                    checked=""
                    class="form-check-input"
                    id="input-isContractConditional"
                    name="isContractConditional"
                    required=""
                    type="radio"
                    value="true"
                  />
                  <label
                    class="form-check-label"
                    for="input-isContractConditional"
                    title=""
                  >
                    Conditional
                  </label>
                </div>
                <div
                  class="form-check"
                >
                  <input
                    class="form-check-input"
                    id="input-isContractConditional-2"
                    name="isContractConditional"
                    required=""
                    type="radio"
                    value="false"
                  />
                  <label
                    class="form-check-label"
                    for="input-isContractConditional-2"
                    title=""
                  >
                    Unconditional
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            class="form-row"
          >
            <label
              class="form-label col-form-label col-md-3"
            >
              Date of Accepted Offer
            </label>
            <div
              class="required col-md-2 form-group"
            >
              <div
                class="react-datepicker-wrapper"
              >
                <div
                  class="react-datepicker__input-container"
                >
                  <input
                    autocomplete="off"
                    class="form-control date-picker"
                    disabled=""
                    id="datepicker-offerAcceptedOn"
                    name="offerAcceptedOn"
                    placeholder="--/--/----"
                    required=""
                    type="text"
                    value="01/01/2020"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="form-row"
          >
            <label
              class="form-label col-form-label col-md-3"
            >
              Purchaser
            </label>
            <div
              class="required col-md-2 form-group"
            >
              <input
                class="form-control"
                disabled=""
                id="input-purchaser"
                name="purchaser"
                required=""
                value="purchaser"
              />
            </div>
          </div>
          <div
            class="form-row"
          >
            <label
              class="form-label col-form-label col-md-3"
            >
              Offer Amount
            </label>
            <div
              class="required col-md-2 form-group"
            >
              <div
                class="input-tooltip-wrapper"
              >
                <input
                  class="form-control"
                  disabled=""
                  name="offerAmount"
                  placeholder=""
                  value="123"
                />
              </div>
            </div>
            <button
              class="btn btn-primary"
              disabled=""
              type="button"
            >
              Change Status to Contract in Place
            </button>
            <div
              class="col-md-6"
            />
          </div>
          <div
            class="ProjectNotes form-row"
          >
            <div
              class="col-md-12 form-group"
            >
              <label
                class="form-label"
                for="input-note"
              >
                Notes
              </label>
              <textarea
                class="col-md-5 form-control"
                disabled=""
                id="input-note"
                name="note"
              >
                my notes
              </textarea>
            </div>
          </div>
          <div
            class="ProjectNotes form-row"
          >
            <div
              class="col-md-12 form-group"
            >
              <label
                class="form-label"
                for="input-appraisedNote"
              >
                Appraised Notes
              </label>
              <textarea
                class="col-md-5 form-control"
                disabled=""
                id="input-appraisedNote"
                name="appraisedNote"
              />
            </div>
          </div>
          <div
            class="ProjectNotes form-row"
          >
            <div
              class="col-md-12 form-group"
            >
              <label
                class="form-label"
                for="input-publicNote"
              >
                Shared Notes
                <svg
                  class="tooltip-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </label>
              <textarea
                class="col-md-5 form-control"
                disabled=""
                id="input-publicNote"
                name="publicNote"
              >
                public note
              </textarea>
            </div>
          </div>
          <div
            class="ProjectNotes form-row"
          >
            <div
              class="col-md-12 form-group"
            >
              <label
                class="form-label"
                for="input-privateNote"
              >
                Private Notes
                <svg
                  class="tooltip-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </label>
              <textarea
                class="col-md-5 form-control"
                disabled=""
                id="input-privateNote"
                name="privateNote"
              >
                private note
              </textarea>
            </div>
          </div>
          <div
            class="form-row"
          >
            <label
              class="form-label col-form-label col-md-3"
            >
              Date Disposed Externally
            </label>
            <div
              class="required col-md-2 form-group"
            >
              <div
                class="react-datepicker-wrapper"
              >
                <div
                  class="react-datepicker__input-container"
                >
                  <input
                    autocomplete="off"
                    class="form-control date-picker"
                    disabled=""
                    id="datepicker-disposedOn"
                    name="disposedOn"
                    placeholder="--/--/----"
                    required=""
                    type="text"
                    value="01/01/2020"
                  />
                </div>
              </div>
            </div>
            <div
              class="col-md-6"
            >
              <button
                class="btn btn-primary"
                disabled=""
                type="button"
              >
                Change Status to Disposed Externally
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="text-align: right;"
    />
  </form>
</div>
`;
